# django-workos

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
sample_project/: README.md  manage.py
sample_project/custom_user/: admin.py  apps.py  models.py  signals.py  tests.py  views.py
sample_project/custom_user/migrations/: 0001_initial.py  0002_auto_20220812_2324.py  0003_officelocation_user_user_location.py  0004_auto_20230604_2126.py  0005_meetingroom.py
sample_project/custom_user/templatetags/: workos_tags.py
sample_project/templates/: base.html  home.html
sample_project/workos_project/: asgi.py  settings.py  urls.py  wsgi.py
workos_login/: admin.py  admin_site.py  apps.py  conf.py  exceptions.py  forms.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py
workos_login/migrations/: 0001_initial.py  0002_auto_20220803_2242.py  0003_loginrule_jit_username_format.py  0004_rename_jit_attributes_loginrule_saved_attributes.py  0005_remove_loginrule_jit_username_format_userlogin_rule.py  0006_loginrule_jit_creation_type.py  0007_auto_20230227_0020.py  0008_remove_loginrule_jit_creation_and_more.py  0009_alter_loginrule_method.py  0010_loginrule_environment_alter_loginrule_method.py  0011_loginrule_auto_update.py  0012_loginrule_require_validated_email.py
workos_login/templates/email/: verification_body.html  verification_body.txt  verification_subject.txt
workos_login/templates/registration/: base_login.html  base_registration.html  bootstrap.html  email_mfa_verify.html  email_verification.html  form.html  login.html  logo.html  (+10 more)
